# app/settings/views.py
@@ -21,7 +21,8 @@ from django.template.loader import render_to_string
 from django.views.decorators.csrf import csrf_exempt
 from django.views.decorators.http import require_http_methods
 from home.util.misc import redact_log
-from oauth.models import CustomUser, DiscordWebhooks, UserInvites, superuser_exists
+from home.util.webhooks import WEBHOOK_EVENTS
+from oauth.models import CustomUser, UserInvites, superuser_exists
 from settings.forms import SiteSettingsForm, UserSettingsForm, WelcomeForm
 from settings.models import SiteSettings
 
@@ -103,9 +104,10 @@ def user_view(request):
     """
     log.debug("user_view: %s", request.method)
     if request.method != "POST":
-        webhooks = DiscordWebhooks.objects.get_request(request)
+        webhooks = request.user.webhooks.all()
         context = {
             "webhooks": webhooks,
+            "webhook_events": WEBHOOK_EVENTS,
             "timezones": sorted(zoneinfo.available_timezones()),
             "default_upload_name_formats": CustomUser.UploadNameFormats.choices,
             "user_avatar_choices": CustomUser.UserAvatarChoices.choices,
